# apkstudio

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  README.md~  apkstudio.pro  appveyor.yml  index.html  params.json
.github/workflows/: build.yml
docs/: index.html
include/: adb.h  adbdock.h  apktool.h  buildrunnable.h  coder.h  coderhighlighter.h  coderhighlighterdefinition.h  coderhighlightertheme.h  codersidebar.h  consoledock.h  constants.h  constants.h.dC3556  decoderunnable.h  dex2jar.h  dialog.h  editortabs.h  fileutils.h  findreplace.h  flickcharm.h  ide.h  installrunnable.h  jarsigner.h  jarsignerdock.h  java.h  javadock.h  macros.h  menubar.h  pathutils.h  pleasewait.h  preferences.h  preopenapk.h  process.h  projectdock.h  qrc.h  runnable.h  runner.h  settingseditor.h  signexportapk.h  signrunnable.h  statusbar.h  (+9 more)
res/: all.qrc  resources.qrc  win32.rc  windows.rc
res/highlight/: default.theme  java.def  numbers.def  smali.def  xml.def  yml.def
res/html/: about.html
res/lang/: en.qm  en.ts
res/styles/: default.qss
resource/: resources.qrc
resource/background/: Thumbs.db
resource/highlight/: java.xml  number.xml  smali.xml  string.xml  xml.xml
resource/icon/: Thumbs.db
resource/language/: en.qm  en.ts
resource/theme/: dark.xml  light.xml
resources/: about.html  all.qrc  apkstudio.desktop  apkstudio.iss  dark.qss  dark.theme  html.def  icon.icns  icon.psd  java.def  light.qss  light.theme  macos.cer  macos.p12  properties.def  screenshot.psd  smali.def  splash.psd  strings.def  win32.rc  windows.rc  xml.def  yaml.def  yml.def
resources/highlight/: default.theme  numbers.def  smali.def  strings.def  xml.def  yml.def
resources/html/: about.html
resources/lang/: en.qm  en.ts
resources/styles/: default.qss
sample/: Thumbs.db  sample.java  sample.smali  sample.xml
source/: apkstudio.pri  apkstudio.pro
source/application/: application.pro  main.cpp
source/components/: components.pro
source/components/vpz/apkstudio/components/: applications.cpp  applications.hpp  clearable.cpp  clearable.hpp  coder.cpp  coder.hpp  coder.hpp.Tu5988  devicechooser.cpp  devicechooser.hpp  deviceinformation.cpp  deviceinformation.hpp  devices.cpp  devices.hpp  dialog.hpp  dockable.cpp  dockable.hpp  editor.cpp  editor.hpp  files.cpp  files.hpp  information.cpp  information.hpp  linenumbers.cpp  linenumbers.hpp  logcat.cpp  logcat.hpp  menubar.cpp  menubar.hpp  music.cpp  music.hpp  outline.cpp  outline.hpp  output.cpp  output.hpp  partitions.cpp  partitions.hpp  photos.cpp  photos.hpp  projects.cpp  projects.hpp  (+20 more)
source/helpers/: helpers.pro
source/helpers/vpz/apkstudio/helpers/: adb.cpp  adb.hpp  apktool.cpp  apktool.hpp  application.cpp  application.hpp  bracketmatcher.cpp  bracketmatcher.hpp  cli.cpp  cli.hpp  completer.cpp  completer.hpp  flickcharm.cpp  flickcharm.hpp  format.cpp  format.hpp  highlighter.cpp  highlighter.hpp  macro.hpp  projects.cpp  projects.hpp  realtime.cpp  realtime.hpp  settings.cpp  settings.hpp  text.cpp  text.hpp
source/resources/: resources.pro
source/resources/vpz/apkstudio/resources/: constant.cpp  constant.hpp  embedded.cpp  embedded.hpp  variant.cpp  variant.hpp
source/widgets/: widgets.pro
source/widgets/vpz/apkstudio/widgets/: editor.cpp  recents.cpp  recents.hpp  scripts.cpp  scripts.hpp
source/windows/: windows.pro
source/windows/vpz/apkstudio/windows/: chmod.cpp  chmod.hpp  dialog.cpp  dialog.hpp  explorer.cpp  explorer.hpp  ide.cpp  ide.hpp  information.cpp  information.hpp  logcat.cpp  logcat.hpp  menubar.cpp  menubar.hpp  settings.cpp  settings.hpp  toolbar.cpp  toolbar.hpp
sources/: adb.cpp  adb.h  adbdock.cpp  adbdock.h  adbinstallworker.cpp  adbinstallworker.h  apkdecompiledialog.cpp  apkdecompiledialog.h  apkdecompileworker.cpp  apkdecompileworker.h  apkrecompileworker.cpp  apkrecompileworker.h  apksignworker.cpp  apksignworker.h  apktool.cpp  apktool.h  appearancesettingswidget.cpp  appearancesettingswidget.h  binarysettingsdialog.cpp  binarysettingsdialog.h  binarysettingswidget.cpp  binarysettingswidget.h  binaryversionsthread.cpp  binaryversionsthread.h  buildrunnable.cpp  buildrunnable.h  coder.cpp  coder.h  coderhighlighter.cpp  coderhighlighter.h  coderhighlighterdefinition.cpp  coderhighlighterdefinition.h  coderhighlightertheme.cpp  coderhighlightertheme.h  codersidebar.cpp  codersidebar.h  consoledock.cpp  consoledock.h  constants.h  darkstyle.cpp  (+107 more)
src/: adb.cpp  adbdock.cpp  apktool.cpp  buildrunnable.cpp  coder.cpp  coderhighlighter.cpp  coderhighlighterdefinition.cpp  coderhighlightertheme.cpp  codersidebar.cpp  consoledock.cpp  constant.h  decoderunnable.cpp  dex2jar.cpp  dialog.cpp  editorspanel.cpp  editorspanel.h  editorspanelui.cpp  editorspanelui.h  editortabs.cpp  editorwidget.cpp  editorwidget.h  editorwidgetui.cpp  editorwidgetui.h  filespanel.cpp  filespanel.h  filespanelui.cpp  filespanelui.h  fileutils.cpp  findreplace.cpp  flickcharm.cpp  flickcharm.h  iaction.h  ide.cpp  ide.h  ideui.cpp  ideui.h  imageeditor.cpp  imageeditor.h  imageeditorui.cpp  imageeditorui.h  (+59 more)
